# mcp-sum

./: .dxtignore  .gitignore  main.py  manifest.json  pyproject.toml  schemas.py
.github/workflows/: ci.yml
server/: launcher.js  main.py
